--- a/src/styles/daniellehmann/components/hero/hero-scroll.scss
+++ b/src/styles/daniellehmann/components/hero/hero-scroll.scss
@@ -6,8 +6,10 @@
   height: 100px;
 
   @include mq('tablet-wide', 'max') {
-    left: 90%;
-    // display: none;
+    left: auto;
+    right: 10px;
+    bottom: 70px;
+    width: auto;
   }
 }
 
